Add in trips service add, remove, get participants
